run ECOU_apid on custom data

--- a/simulation_engine/test.ipynb
+++ b/simulation_engine/test.ipynb
@@ -2,39 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b019801d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[autoreload of simulation_engine.algorithms.apid failed: Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\tmari\\AppData\\Roaming\\Python\\Python312\\site-packages\\IPython\\extensions\\autoreload.py\", line 276, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"C:\\Users\\tmari\\AppData\\Roaming\\Python\\Python312\\site-packages\\IPython\\extensions\\autoreload.py\", line 475, in superreload\n",
-      "    module = reload(module)\n",
-      "             ^^^^^^^^^^^^^^\n",
-      "  File \"d:\\Programme\\anaconda\\envs\\py312\\Lib\\importlib\\__init__.py\", line 131, in reload\n",
-      "    _bootstrap._exec(spec, module)\n",
-      "  File \"<frozen importlib._bootstrap>\", line 866, in _exec\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 995, in exec_module\n",
-      "  File \"<frozen importlib._bootstrap>\", line 488, in _call_with_frames_removed\n",
-      "  File \"d:\\TUM Workspace\\Thesis Workspace\\causal-bounds\\simulation_engine\\..\\simulation_engine\\algorithms\\apid.py\", line 12, in <module>\n",
-      "    from simulation_engine.algorithms.apid_src.src.models.apid import APID\n",
-      "  File \"d:\\TUM Workspace\\Thesis Workspace\\causal-bounds\\simulation_engine\\..\\simulation_engine\\algorithms\\apid_src\\src\\models\\__init__.py\", line 1, in <module>\n",
-      "    from src.models.apid import ConditionalAPID, APID\n",
-      "ModuleNotFoundError: No module named 'src'\n",
-      "]\n"
+      "C:\\Users\\tmari\\AppData\\Roaming\\Python\\Python312\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "d:\\TUM Workspace\\Thesis Workspace\\causal-bounds\\simulation_engine\\..\\simulation_engine\\algorithms\\apid.py:138: UserWarning: \n",
+      "The version_base parameter is not specified.\n",
+      "Please specify a compatability version level, or None.\n",
+      "Will assume defaults for version 1.1\n",
+      "  @hydra.main(config_name=f'config.yaml', config_path='./apid_src/config/')\n"
      ]
     }
    ],
@@ -186,25 +168,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "46e7a6f3",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'APID' is not defined",
+     "ename": "TypeError",
+     "evalue": "Apid.run_direct() takes 0 positional arguments but 1 was given",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mApid\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_direct\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32md:\\TUM Workspace\\Thesis Workspace\\causal-bounds\\simulation_engine\\..\\simulation_engine\\algorithms\\apid.py:56\u001b[0m, in \u001b[0;36mrun_direct\u001b[1;34m()\u001b[0m\n\u001b[0;32m     31\u001b[0m # 2. Create config manually (without Hydra)\n\u001b[0;32m     32\u001b[0m args = SimpleNamespace(\n\u001b[0;32m     33\u001b[0m     model=SimpleNamespace(\n\u001b[0;32m     34\u001b[0m         name='apid',\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     53\u001b[0m     exp=SimpleNamespace(device='cpu', logging=False, seed=0, mlflow_uri=None)\n\u001b[0;32m     54\u001b[0m )\n\u001b[1;32m---> 56\u001b[0m # 3. Instantiate and train model\n\u001b[0;32m     57\u001b[0m model = APID(args)\n\u001b[0;32m     58\u001b[0m f_dict = {'Y_f': torch.tensor([[0.0]]), 'T_f': 0}  # factual outcome Y=0.0, A=0\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'APID' is not defined"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 6\u001b[0m\n\u001b[0;32m      1\u001b[0m data \u001b[38;5;241m=\u001b[39m ContinuousIV\u001b[38;5;241m.\u001b[39mrun_rolling_b_X_Y_simulations(\n\u001b[0;32m      2\u001b[0m     b_range\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m5\u001b[39m), N_points\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m, replications\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, n\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m500\u001b[39m,\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;66;03m# allowed_functions=['identity']\u001b[39;00m\n\u001b[0;32m      4\u001b[0m )\n\u001b[1;32m----> 6\u001b[0m \u001b[43mApid\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_direct\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43miloc\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m80\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: Apid.run_direct() takes 0 positional arguments but 1 was given"
      ]
     }
    ],
    "source": [
-    "Apid.run_direct()"
+    "data = ContinuousIV.run_rolling_b_X_Y_simulations(\n",
+    "    b_range=(-5, 5), N_points=100, replications=1, n=500,\n",
+    "    # allowed_functions=['identity']\n",
+    ")\n",
+    "\n",
+    "Apid.run_from_generate_data(data.iloc[80])"
    ]
   },
   {
