--- a/binaryIV/binaryIV_classification.ipynb
+++ b/binaryIV/binaryIV_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "712e6859",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a36d095a",
    "metadata": {},
    "outputs": [],
@@ -51,8 +51,7 @@
     "import re\n",
     "\n",
     "#setup\n",
-    "#results = pd.read_pickle('../simulation_engine/results/binaryIV/N2000/results.pkl')\n",
-    "results = pd.read_pickle('testrun.pkl')\n",
+    "results = pd.read_pickle('../simulation_engine/results/binaryIV/06_06/12/results.pkl')\n",
     "binaryIV = BinaryIV('IV DAG', results)\n",
     "ATE_algs = binaryIV.get_algorithms('ATE')\n",
     "PNS_algs = binaryIV.get_algorithms('PNS')\n",
