--- a/simulation_engine/test.ipynb
+++ b/simulation_engine/test.ipynb
@@ -2,16 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "id": "b019801d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "C:\\Users\\tmari\\AppData\\Roaming\\Python\\Python312\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "d:\\TUM Workspace\\Thesis Workspace\\causal-bounds\\simulation_engine\\..\\simulation_engine\\algorithms\\apid.py:233: UserWarning: \n",
+      "The version_base parameter is not specified.\n",
+      "Please specify a compatability version level, or None.\n",
+      "Will assume defaults for version 1.1\n",
+      "  @hydra.main(config_name=f'config.yaml', config_path='./apid_src/config/')\n"
      ]
     }
    ],
@@ -95,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "ffc34067",
    "metadata": {},
    "outputs": [
@@ -103,35 +108,90 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Zaffalon result: 0.0022,0.4908\n"
+      "Running ATE_zhangbareinboim...\n",
+      "ATE_zhangbareinboim completed in 0.42 seconds.\n",
+      "Running ATE_causaloptim--binned...\n",
+      "Entering binned Binary IV Scenario for algorithm: ATE_causaloptim\n",
+      "Running ATE_causaloptim...\n",
+      "ATE_causaloptim completed in 4.68 seconds.\n",
+      "Total runtime: 4.68 seconds.\n",
+      "Exiting binned Binary IV Scenario.\n",
+      "ATE_causaloptim--binned completed in 4.68 seconds.\n",
+      "Running ATE_autobound--binned...\n",
+      "Entering binned Binary IV Scenario for algorithm: ATE_autobound\n",
+      "Running ATE_autobound...\n",
+      "ATE_autobound completed in 1.48 seconds.\n",
+      "Total runtime: 1.48 seconds.\n",
+      "Exiting binned Binary IV Scenario.\n",
+      "ATE_autobound--binned completed in 1.48 seconds.\n",
+      "Running ATE_zaffalonbounds--binned...\n",
+      "Entering binned Binary IV Scenario for algorithm: ATE_zaffalonbounds\n",
+      "Running ATE_zaffalonbounds...\n",
+      "ATE_zaffalonbounds completed in 12.46 seconds.\n",
+      "Total runtime: 12.46 seconds.\n",
+      "Exiting binned Binary IV Scenario.\n",
+      "ATE_zaffalonbounds--binned completed in 12.46 seconds.\n",
+      "Running ATE_2SLS-0.99...\n",
+      "ATE_2SLS-0.99 completed in 0.03 seconds.\n",
+      "Running ATE_2SLS-0.98...\n",
+      "ATE_2SLS-0.98 completed in 0.02 seconds.\n",
+      "Running ATE_2SLS-0.95...\n",
+      "ATE_2SLS-0.95 completed in 0.03 seconds.\n",
+      "Running ATE_entropybounds-0.80--binned...\n",
+      "Entering binned Binary IV Scenario for algorithm: ATE_entropybounds-0.80\n",
+      "Running ATE_entropybounds-0.80...\n",
+      "ATE_entropybounds-0.80 completed in 0.24 seconds.\n",
+      "Total runtime: 0.24 seconds.\n",
+      "Exiting binned Binary IV Scenario.\n",
+      "ATE_entropybounds-0.80--binned completed in 0.24 seconds.\n",
+      "Running ATE_entropybounds-0.20--binned...\n",
+      "Entering binned Binary IV Scenario for algorithm: ATE_entropybounds-0.20\n",
+      "Running ATE_entropybounds-0.20...\n",
+      "ATE_entropybounds-0.20 completed in 0.48 seconds.\n",
+      "Total runtime: 0.48 seconds.\n",
+      "Exiting binned Binary IV Scenario.\n",
+      "ATE_entropybounds-0.20--binned completed in 0.48 seconds.\n",
+      "Running ATE_entropybounds-0.10--binned...\n",
+      "Entering binned Binary IV Scenario for algorithm: ATE_entropybounds-0.10\n",
+      "Running ATE_entropybounds-0.10...\n",
+      "ATE_entropybounds-0.10 completed in 0.40 seconds.\n",
+      "Total runtime: 0.40 seconds.\n",
+      "Exiting binned Binary IV Scenario.\n",
+      "ATE_entropybounds-0.10--binned completed in 0.40 seconds.\n",
+      "Total runtime: 20.25 seconds.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'ATE_zaffalonbounds_bound_lower': 0.0022,\n",
-       " 'ATE_zaffalonbounds_bound_upper': 0.4908,\n",
-       " 'ATE_zaffalonbounds_bound_valid': True,\n",
-       " 'ATE_zaffalonbounds_bound_width': 0.48860000000000003,\n",
-       " 'ATE_zaffalonbounds_bound_failed': False}"
+       "{'runtimes': {'ATE_zhangbareinboim': 0.4167938232421875,\n",
+       "  'ATE_causaloptim--binned': 4.681593179702759,\n",
+       "  'ATE_autobound--binned': 1.482508897781372,\n",
+       "  'ATE_zaffalonbounds--binned': 12.462214946746826,\n",
+       "  'ATE_2SLS-0.99': 0.03056049346923828,\n",
+       "  'ATE_2SLS-0.98': 0.01915121078491211,\n",
+       "  'ATE_2SLS-0.95': 0.02704024314880371,\n",
+       "  'ATE_entropybounds-0.80--binned': 0.24022364616394043,\n",
+       "  'ATE_entropybounds-0.20--binned': 0.4833106994628906,\n",
+       "  'ATE_entropybounds-0.10--binned': 0.40218234062194824},\n",
+       " 'timestamp': '2025-06-10T06:57:16.279801'}"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data = ContinuousIV.run_rolling_b_X_Y_simulations(\n",
-    "        b_range=(3, 10), N_points=1, replications=1, n=500,\n",
-    "        allowed_functions=['identity'])\n",
+    "        b_range=(-10, 10), N_points=2, replications=1, n=500)\n",
     "\n",
     "contIV = ContinuousIV('IV DAG', data)\n",
-    "data = contIV.binaryIV.data\n",
+    "results = contIV.run()\n",
+    "# row_dicts = [row.to_dict() for _, row in data.iterrows()]\n",
+    "# ZaffalonBounds._run_zaffalon_from_row_dict(row_dicts[0], 'ATE')\n",
     "\n",
-    "row_dicts = [row.to_dict() for _, row in data.iterrows()]\n",
-    "ZaffalonBounds._run_zaffalon_from_row_dict(row_dicts[0], 'ATE')\n",
-    "\n"
+    "results"
    ]
   },
   {
