--- a/binaryIV/binaryIV_classification.ipynb
+++ b/binaryIV/binaryIV_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "712e6859",
    "metadata": {},
    "outputs": [],
@@ -17,6 +17,7 @@
     "os.environ['R_HOME'] = 'D:/Program Files/R-4.5.0' #@TODO include in some setup file\n",
     "\n",
     "from simulation_engine.scenarios.iv.binary_iv import BinaryIV\n",
+    "from simulation_engine.scenarios.iv.continuous_iv import ContinuousIV\n",
     "from simulation_engine.util.plotting_util import PlottingUtil\n",
     "\n",
     "import pandas as pd\n",
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a36d095a",
    "metadata": {},
    "outputs": [],
@@ -51,8 +52,9 @@
     "import re\n",
     "\n",
     "#setup\n",
-    "results = pd.read_pickle('../simulation_engine/results/binaryIV/06_06/12/results.pkl')\n",
-    "binaryIV = BinaryIV('IV DAG', results)\n",
+    "results = pd.read_pickle('testrun.pkl')\n",
+    "# results = pd.read_pickle('../simulation_engine/results/binaryIV/06_06/12/results.pkl')\n",
+    "binaryIV = ContinuousIV('IV DAG', results)\n",
     "ATE_algs = binaryIV.get_algorithms('ATE')\n",
     "PNS_algs = binaryIV.get_algorithms('PNS')\n",
     "algs = ATE_algs + PNS_algs\n"
