perform entropy experiments

--- a/binaryIV/binaryIV_classification.ipynb
+++ b/binaryIV/binaryIV_classification.ipynb
@@ -2100,7 +2100,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
+   "id": "179cba38",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    2000.000000\n",
+       "mean        0.683512\n",
+       "std         0.295577\n",
+       "min        -0.000000\n",
+       "25%         0.475304\n",
+       "50%         0.770973\n",
+       "75%         0.953694\n",
+       "max         1.000000\n",
+       "Name: entropy_U, dtype: float64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results['entropy_U'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "e3f6a8ec",
    "metadata": {},
    "outputs": [
