improvements to entropybounds

--- a/simulation_engine/test_entropy.ipynb
+++ b/simulation_engine/test_entropy.ipynb
@@ -2818,7 +2818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "4f278520",
    "metadata": {},
    "outputs": [
@@ -2833,9 +2833,8 @@
     }
    ],
    "source": [
-    "# binaryIV.run(['ATE_entropybounds-trueTheta'])\n",
-    "# binaryIV.run(['PNS_entropybounds-trueTheta'])\n",
-    "binaryIV.run(['PNS_nonpara'])\n",
+    "binaryIV.run(['ATE_entropybounds-trueTheta', 'ATE_tianpearl'])\n",
+    "binaryIV.run(['PNS_entropybounds-trueTheta', 'PNS_tianpearl'])\n",
     "results = binaryIV.data\n"
    ]
   },
