--- a/simulation_engine/test_entropy.ipynb
+++ b/simulation_engine/test_entropy.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "from simulation_engine.scenarios.iv.binary_iv import BinaryIV\n",
     "from simulation_engine.scenarios.iv.continuous_iv import ContinuousIV\n",
-    "from simulation_engine.scenarios.iv.base_iv import IVScenario\n",
+    "from simulation_engine.scenarios.iv.base_iv import Scenario\n",
     "from simulation_engine.util.plotting_util import PlottingUtil\n",
     "from simulation_engine.algorithms.causaloptim import Causaloptim\n",
     "from simulation_engine.algorithms.zhang_bareinboim import ZhangBareinboim\n",
