BinCon: PNS Zaffalon

--- a/simulation_engine/test.ipynb
+++ b/simulation_engine/test.ipynb
@@ -66,25 +66,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Algorithm 'P' is not recognized.\n",
-      "Algorithm 'N' is not recognized.\n",
-      "Algorithm 'S' is not recognized.\n",
-      "Algorithm '_' is not recognized.\n",
-      "Algorithm 'z' is not recognized.\n",
-      "Algorithm 'a' is not recognized.\n",
-      "Algorithm 'f' is not recognized.\n",
-      "Algorithm 'f' is not recognized.\n",
-      "Algorithm 'a' is not recognized.\n",
-      "Algorithm 'l' is not recognized.\n",
-      "Algorithm 'o' is not recognized.\n",
-      "Algorithm 'n' is not recognized.\n",
-      "Algorithm 'b' is not recognized.\n",
-      "Algorithm 'o' is not recognized.\n",
-      "Algorithm 'u' is not recognized.\n",
-      "Algorithm 'n' is not recognized.\n",
-      "Algorithm 'd' is not recognized.\n",
-      "Algorithm 's' is not recognized.\n",
-      "Total runtime: 0.00 seconds.\n"
+      "Running PNS_zaffalonbounds...\n",
+      "PNS_zaffalonbounds completed in 9.06 seconds.\n",
+      "Total runtime: 9.06 seconds.\n"
      ]
     }
    ],
@@ -95,7 +79,7 @@
     "\n",
     "algorithms = [alg for alg in scenario.get_algorithms('ATE') if 'zaffalonbounds' not in alg]\n",
     "algorithms\n",
-    "runtimes = scenario.run(['PNS_zaffalonbounds'])\n",
+    "runtimes = scenario.run()\n",
     "# scenario.data['entropy_U'].describe()"
    ]
   },
@@ -122,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "id": "8a024a79",
    "metadata": {},
    "outputs": [
@@ -130,16 +114,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                    Algorithm Fail Rate (%) Invalid Rate (%) Net Bound Width Bound Width Invalid Δ (%)\n",
-      "       PNS_entropybounds-0.10          0.00             0.00          0.2879      0.2879           N/A\n",
-      "              PNS_causaloptim          0.00             0.00          0.5660      0.5660           N/A\n",
-      "                PNS_autobound          0.00             0.00          0.5660      0.5660           N/A\n",
-      "       PNS_entropybounds-0.20          0.00             0.00          0.5758      0.5758           N/A\n",
-      "       PNS_entropybounds-0.80          0.00             0.00          0.7800      0.7800           N/A\n",
-      "  PNS_entropybounds-trueTheta          0.00             0.00          0.7800      0.7800           N/A\n",
-      "PNS_entropybounds-randomTheta          0.00             0.00          0.7800      0.7800           N/A\n",
-      "           PNS_zaffalonbounds        100.00              nan             nan      1.0000           N/A\n",
-      "                PNS_tianpearl          0.00           100.00             nan      1.0000          0.00\n",
+      "         Algorithm Fail Rate (%) Invalid Rate (%) Net Bound Width Bound Width Invalid Δ (%)\n",
+      "PNS_zaffalonbounds          0.00             0.00          0.0231      0.0231           N/A\n",
       "Error: The 'b_X_Y' column has constant or invalid values. Cannot plot.\n"
      ]
     }
