--- a/simulation_engine/test.ipynb
+++ b/simulation_engine/test.ipynb
@@ -315,24 +315,24 @@
    "outputs": [
     {
      "ename": "AttributeError",
-     "evalue": "'ContinuousIV' object has no attribute 'binary'",
+     "evalue": "'ContinuousConf' object has no attribute 'binaryConf'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m data \u001b[38;5;241m=\u001b[39m ContinuousConf\u001b[38;5;241m.\u001b[39mrun_rolling_b_X_Y_simulations(\n\u001b[0;32m      2\u001b[0m         b_range\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m5\u001b[39m), N_points\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m50\u001b[39m, replications\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, n\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m500\u001b[39m)\n\u001b[0;32m      4\u001b[0m scenario \u001b[38;5;241m=\u001b[39m ContinuousIV(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIV DAG\u001b[39m\u001b[38;5;124m'\u001b[39m, data)\n\u001b[1;32m----> 5\u001b[0m \u001b[43mscenario\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbinary\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# algorithms = [alg for alg in scenario.get_algorithms('ATE') if 'zaffalonbounds' not in alg]\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# results = scenario.run(algorithms)\u001b[39;00m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'ContinuousIV' object has no attribute 'binary'"
+      "Cell \u001b[1;32mIn[10], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m data \u001b[38;5;241m=\u001b[39m ContinuousConf\u001b[38;5;241m.\u001b[39mrun_rolling_b_X_Y_simulations(\n\u001b[0;32m      2\u001b[0m         b_range\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m5\u001b[39m), N_points\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m, replications\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, n\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m500\u001b[39m)\n\u001b[0;32m      4\u001b[0m scenario \u001b[38;5;241m=\u001b[39m ContinuousConf(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIV DAG\u001b[39m\u001b[38;5;124m'\u001b[39m, data)\n\u001b[1;32m----> 5\u001b[0m \u001b[43mscenario\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbinaryConf\u001b[49m\u001b[38;5;241m.\u001b[39mdata\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# algorithms = [alg for alg in scenario.get_algorithms('ATE') if 'zaffalonbounds' not in alg]\u001b[39;00m\n\u001b[0;32m      7\u001b[0m results \u001b[38;5;241m=\u001b[39m scenario\u001b[38;5;241m.\u001b[39mrun()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'ContinuousConf' object has no attribute 'binaryConf'"
      ]
     }
    ],
    "source": [
     "data = ContinuousConf.run_rolling_b_X_Y_simulations(\n",
-    "        b_range=(-5, 5), N_points=50, replications=1, n=500)\n",
+    "        b_range=(-5, 5), N_points=2, replications=1, n=500)\n",
     "\n",
-    "scenario = ContinuousIV('IV DAG', data)\n",
-    "scenario.binaryConf\n",
+    "scenario = ContinuousConf('IV DAG', data)\n",
+    "scenario.binary.data\n",
     "# algorithms = [alg for alg in scenario.get_algorithms('ATE') if 'zaffalonbounds' not in alg]\n",
-    "# results = scenario.run(algorithms)"
+    "results = scenario.run()"
    ]
   },
   {
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "72462561",
    "metadata": {},
    "outputs": [
@@ -694,9 +694,10 @@
     }
    ],
    "source": [
-    "algs = scenario.get_algorithms('ATE')\n",
+    "query = 'ATE'\n",
+    "algs = scenario.get_algorithms(query)\n",
     "PlottingUtil.print_bound_statistics_table(scenario.data, algs)\n",
-    "PlottingUtil.plot_smoothed_query_vs_bounds(scenario.data, 'ATE', algs, window=5)"
+    "PlottingUtil.plot_smoothed_query_vs_bounds(scenario.data, query, algs, window=5)"
    ]
   },
   {
