save final results

--- a/contConf/contConf_classification.ipynb
+++ b/contConf/contConf_classification.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "a36d095a",
    "metadata": {},
    "outputs": [
@@ -130,10 +130,26 @@
        " 'ATE_entropybounds-0.10--binned_bound_valid',\n",
        " 'ATE_entropybounds-0.10--binned_bound_width',\n",
        " 'ATE_entropybounds-0.10--binned_bound_failed',\n",
-       " 'ATE_entropybounds-0.10--binned_theta']"
+       " 'ATE_entropybounds-0.10--binned_theta',\n",
+       " 'ATE_entropybounds-randomTheta--binned_bound_lower',\n",
+       " 'ATE_entropybounds-randomTheta--binned_bound_upper',\n",
+       " 'ATE_entropybounds-randomTheta--binned_bound_valid',\n",
+       " 'ATE_entropybounds-randomTheta--binned_bound_width',\n",
+       " 'ATE_entropybounds-randomTheta--binned_bound_failed',\n",
+       " 'ATE_entropybounds-randomTheta--binned_theta',\n",
+       " 'ATE_tianpearl--binned_bound_lower',\n",
+       " 'ATE_tianpearl--binned_bound_upper',\n",
+       " 'ATE_tianpearl--binned_bound_width',\n",
+       " 'ATE_tianpearl--binned_bound_failed',\n",
+       " 'ATE_tianpearl--binned_bound_valid',\n",
+       " 'ATE_manski--binned_bound_lower',\n",
+       " 'ATE_manski--binned_bound_upper',\n",
+       " 'ATE_manski--binned_bound_width',\n",
+       " 'ATE_manski--binned_bound_failed',\n",
+       " 'ATE_manski--binned_bound_valid']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,107 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "2e56a8e3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Removed columns: []\n",
-      "Running ATE_entropybounds-randomTheta--binned...\n",
-      "Entering binned Binary Scenario for algorithm: ATE_entropybounds-randomTheta\n",
-      "Running ATE_entropybounds-randomTheta...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\tmari\\AppData\\Roaming\\Python\\Python312\\site-packages\\numpy\\_core\\fromnumeric.py:3904: RuntimeWarning: Mean of empty slice.\n",
-      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
-      "C:\\Users\\tmari\\AppData\\Roaming\\Python\\Python312\\site-packages\\numpy\\_core\\_methods.py:147: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  ret = ret.dtype.type(ret / rcount)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error in LDL factorization when computing the nonzero elements. The problem seems to be non-convex.\n",
-      "factor_status: 0, num_vars: 8\n",
-      "Error in LDL initial factorization.\n",
-      "ERROR: init_lin_sys_work failure\n",
-      "Error in LDL factorization when computing the nonzero elements. The problem seems to be non-convex.\n",
-      "factor_status: 0, num_vars: 8\n",
-      "Error in LDL initial factorization.\n",
-      "ERROR: init_lin_sys_work failure\n",
-      "Error in LDL factorization when computing the nonzero elements. The problem seems to be non-convex.\n",
-      "factor_status: 0, num_vars: 8\n",
-      "Error in LDL initial factorization.\n",
-      "ERROR: init_lin_sys_work failure\n",
-      "Error in LDL factorization when computing the nonzero elements. The problem seems to be non-convex.\n",
-      "factor_status: 0, num_vars: 8\n",
-      "Error in LDL initial factorization.\n",
-      "ERROR: init_lin_sys_work failure\n",
-      "ATE_entropybounds-randomTheta completed in 289.40 seconds.\n",
-      "Total runtime: 289.40 seconds.\n",
-      "Exiting binned Binary Scenario.\n",
-      "ATE_entropybounds-randomTheta--binned completed in 289.40 seconds.\n",
-      "Running ATE_tianpearl--binned...\n",
-      "Entering binned Binary Scenario for algorithm: ATE_tianpearl\n",
-      "Running ATE_tianpearl...\n",
-      "ATE_tianpearl completed in 0.82 seconds.\n",
-      "Total runtime: 0.82 seconds.\n",
-      "Exiting binned Binary Scenario.\n",
-      "ATE_tianpearl--binned completed in 0.83 seconds.\n",
-      "Running ATE_manski--binned...\n",
-      "Entering binned Binary Scenario for algorithm: ATE_manski\n",
-      "Running ATE_manski...\n",
-      "ATE_manski completed in 0.88 seconds.\n",
-      "Total runtime: 0.88 seconds.\n",
-      "Exiting binned Binary Scenario.\n",
-      "ATE_manski--binned completed in 0.89 seconds.\n",
-      "Total runtime: 291.12 seconds.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# remove all cols that cotain 'tianpearl' \n",
-    "cols_to_remove = [col for col in results.columns if 'tianpearl' in col or 'manski' in col]\n",
-    "results2 = results.drop(columns=cols_to_remove)\n",
-    "print('Removed columns:', cols_to_remove)\n",
-    "results2\n",
-    "scenario = ContinuousConf('DAG', results2)\n",
-    "scenario.run(['ATE_entropybounds-randomTheta--binned',\n",
-    "              'ATE_tianpearl--binned',\n",
-    "              'ATE_manski--binned',\n",
-    "              ])\n",
-    "results2 = scenario.data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15467fc3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "8a69071e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.to_pickle(results2, '17_06/results.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "e3f6a8ec",
    "metadata": {},
    "outputs": [
@@ -289,7 +205,7 @@
    ],
    "source": [
     "#ATE Evaluation\n",
-    "df = results2.copy()\n",
+    "df = results.copy()\n",
     "# Extract unique algorithm names from columns like 'ATE_{algorithm_name}_{...}'\n",
     "algorithm_names = PlottingUtil.extract_algorithm_names(df, 'ATE')\n",
     "PlottingUtil.print_bound_statistics_table(df, algorithm_names)\n",
