--- a/contIV/contIV_classification.ipynb
+++ b/contIV/contIV_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "712e6859",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a36d095a",
    "metadata": {},
    "outputs": [],
@@ -59,67 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "a7ea864c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Removed columns: []\n",
-      "Running ATE_entropybounds-randomTheta--binned...\n",
-      "Entering binned Binary IV Scenario for algorithm: ATE_entropybounds-randomTheta\n",
-      "Running ATE_entropybounds-randomTheta...\n",
-      "ATE_entropybounds-randomTheta completed in 269.90 seconds.\n",
-      "Total runtime: 269.90 seconds.\n",
-      "Exiting binned Binary IV Scenario.\n",
-      "ATE_entropybounds-randomTheta--binned completed in 269.90 seconds.\n",
-      "Running ATE_tianpearl--binned...\n",
-      "Entering binned Binary IV Scenario for algorithm: ATE_tianpearl\n",
-      "Running ATE_tianpearl...\n",
-      "ATE_tianpearl completed in 0.79 seconds.\n",
-      "Total runtime: 0.80 seconds.\n",
-      "Exiting binned Binary IV Scenario.\n",
-      "ATE_tianpearl--binned completed in 0.80 seconds.\n",
-      "Running ATE_manski--binned...\n",
-      "Entering binned Binary IV Scenario for algorithm: ATE_manski\n",
-      "Running ATE_manski...\n",
-      "ATE_manski completed in 0.76 seconds.\n",
-      "Total runtime: 0.76 seconds.\n",
-      "Exiting binned Binary IV Scenario.\n",
-      "ATE_manski--binned completed in 0.76 seconds.\n",
-      "Total runtime: 271.47 seconds.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# remove all cols that cotain 'tianpearl' \n",
-    "cols_to_remove = [col for col in results.columns if 'tianpearl' in col or 'manski' in col]\n",
-    "results2 = results.drop(columns=cols_to_remove)\n",
-    "print('Removed columns:', cols_to_remove)\n",
-    "results2\n",
-    "scenario = ContinuousIV('DAG', results2)\n",
-    "scenario.run(['ATE_entropybounds-randomTheta--binned',\n",
-    "              'ATE_tianpearl--binned',\n",
-    "              'ATE_manski--binned',\n",
-    "              ])\n",
-    "results2 = scenario.data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "d62866ac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.to_pickle(results2,'17_06/results.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "e3f6a8ec",
    "metadata": {},
    "outputs": [
@@ -156,7 +96,7 @@
    ],
    "source": [
     "#ATE Evaluation\n",
-    "df = results2.copy()\n",
+    "df = results\n",
     "algorithm_names = PlottingUtil.extract_algorithm_names(df, 'ATE')\n",
     "PlottingUtil.print_bound_statistics_table(df, algorithm_names, 'ATE')\n",
     "PlottingUtil.plot_smoothed_query_vs_bounds(df, 'ATE', algorithm_names, 100)"
