update binConf PNS_tianpearl

--- a/binConf/binConf_classification.ipynb
+++ b/binConf/binConf_classification.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a36d095a",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
        " 'PNS_tianpearl_bound_valid']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,9 +214,48 @@
     "\n",
     "#setup\n",
     "results = pd.read_pickle('17_06/results.pkl')\n",
-    "binaryIV = BinaryConf('IV DAG', results)\n",
+    "binaryConf = BinaryConf('IV DAG', results)\n",
     "results.columns.tolist()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f14ce4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['PNS_tianpearl_bound_lower',\n",
+       " 'PNS_tianpearl_bound_upper',\n",
+       " 'PNS_tianpearl_bound_width',\n",
+       " 'PNS_tianpearl_bound_failed',\n",
+       " 'PNS_tianpearl_bound_valid']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#delete all cols containing 'PNS_tianpearl'\n",
+    "cols_to_delete = [col for col in results.columns if 'PNS_tianpearl' in col]\n",
+    "cols_to_delete\n",
+    "results2 = results.drop(columns=cols_to_delete)\n",
+    "#rerun tianpearl\n",
+    "binaryConf = BinaryConf('IV DAG', results2)\n",
+    "binaryConf.run([\"PNS_tianpearl\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f79b6a3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
