update binIV PNS_tianpearl

--- a/binIV/binIV_classification.ipynb
+++ b/binIV/binIV_classification.ipynb
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "65280e50",
    "metadata": {},
    "outputs": [
@@ -3235,8 +3235,7 @@
     "subset = results\n",
     "algorithm_names = PlottingUtil.extract_algorithm_names(subset, 'PNS')\n",
     "PlottingUtil.print_bound_statistics_table(subset, algorithm_names, 'PNS')\n",
-    "PlottingUtil.plot_smoothed_query_vs_bounds(subset, 'PNS', algorithm_names, 500)\n",
-    "subset"
+    "PlottingUtil.plot_smoothed_query_vs_bounds(subset, 'PNS', algorithm_names, 500)"
    ]
   },
   {
