test mediation data

--- a/simulation_engine/test_pythonpkg.ipynb
+++ b/simulation_engine/test_pythonpkg.ipynb
@@ -2,21 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3543c3e0",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\tmari\\AppData\\Roaming\\Python\\Python312\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "d:\\TUM Workspace\\Thesis Workspace\\causal-bounds\\simulation_engine\\..\\simulation_engine\\algorithms\\apid.py:233: UserWarning: \n",
-      "The version_base parameter is not specified.\n",
-      "Please specify a compatability version level, or None.\n",
-      "Will assume defaults for version 1.1\n",
-      "  @hydra.main(config_name=f'config.yaml', config_path='./apid_src/config/')\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'simulation_engine.scenarios.iv.base_iv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 16\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msimulation_engine\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mscenarios\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01miv\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbinary_iv\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BinaryIV\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msimulation_engine\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mscenarios\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01miv\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcontinuous_iv\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ContinuousIV\n\u001b[1;32m---> 16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msimulation_engine\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mscenarios\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01miv\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbase_iv\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Scenario\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msimulation_engine\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutil\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mplotting_util\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m PlottingUtil\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msimulation_engine\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01malgorithms\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcausaloptim\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Causaloptim\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'simulation_engine.scenarios.iv.base_iv'"
      ]
     }
    ],
@@ -36,7 +34,7 @@
     "\n",
     "from simulation_engine.scenarios.iv.binary_iv import BinaryIV\n",
     "from simulation_engine.scenarios.iv.continuous_iv import ContinuousIV\n",
-    "from simulation_engine.scenarios.iv.base_iv import Scenario\n",
+    "from simulation_engine.scenarios.customDAG.customBinaryDAG import CustomBinaryDAG\n",
     "from simulation_engine.util.plotting_util import PlottingUtil\n",
     "from simulation_engine.algorithms.causaloptim import Causaloptim\n",
     "from simulation_engine.algorithms.zhang_bareinboim import ZhangBareinboim\n",
