--- a/simulation_engine/test_pythonpkg.ipynb
+++ b/simulation_engine/test_pythonpkg.ipynb
@@ -223,17 +223,235 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "2c54812d",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running ATE_autobound...\n",
+      "GLPSOL--GLPK LP/MIP Solver 5.0\n",
+      "Parameter(s) specified in the command line:\n",
+      " --write C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpemeqxcbj.glpk.raw --wglp C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpo4p7zrp6.glpk.glp\n",
+      " --cpxlp C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpabslik0w.pyomo.lp\n",
+      "Reading problem data from 'C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpabslik0w.pyomo.lp'...\n",
+      "10 rows, 65 columns, 161 non-zeros\n",
+      "266 lines were read\n",
+      "Writing problem data to 'C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpo4p7zrp6.glpk.glp'...\n",
+      "314 lines were written\n",
+      "GLPK Simplex Optimizer 5.0\n",
+      "10 rows, 65 columns, 161 non-zeros\n",
+      "Preprocessing...\n",
+      "10 rows, 64 columns, 160 non-zeros\n",
+      "Scaling...\n",
+      " A: min|aij| =  1.000e+00  max|aij| =  1.000e+00  ratio =  1.000e+00\n",
+      "Problem data seem to be well scaled\n",
+      "Constructing initial basis...\n",
+      "Size of triangular part is 9\n",
+      "*     0: obj =   7.400000000e-02 inf =   1.110e-16 (16)\n",
+      "*     4: obj =   5.960000000e-01 inf =   1.110e-16 (0)\n",
+      "OPTIMAL LP SOLUTION FOUND\n",
+      "Time used:   0.0 secs\n",
+      "Memory used: 0.1 Mb (83279 bytes)\n",
+      "Writing basic solution to 'C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpemeqxcbj.glpk.raw'...\n",
+      "84 lines were written\n",
+      "GLPSOL--GLPK LP/MIP Solver 5.0\n",
+      "Parameter(s) specified in the command line:\n",
+      " --write C:\\Users\\tmari\\AppData\\Local\\Temp\\tmp28h900kx.glpk.raw --wglp C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpc628k89r.glpk.glp\n",
+      " --cpxlp C:\\Users\\tmari\\AppData\\Local\\Temp\\tmp8_jigh0p.pyomo.lp\n",
+      "Reading problem data from 'C:\\Users\\tmari\\AppData\\Local\\Temp\\tmp8_jigh0p.pyomo.lp'...\n",
+      "10 rows, 65 columns, 161 non-zeros\n",
+      "266 lines were read\n",
+      "Writing problem data to 'C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpc628k89r.glpk.glp'...\n",
+      "314 lines were written\n",
+      "GLPK Simplex Optimizer 5.0\n",
+      "10 rows, 65 columns, 161 non-zeros\n",
+      "Preprocessing...\n",
+      "10 rows, 64 columns, 160 non-zeros\n",
+      "Scaling...\n",
+      " A: min|aij| =  1.000e+00  max|aij| =  1.000e+00  ratio =  1.000e+00\n",
+      "Problem data seem to be well scaled\n",
+      "Constructing initial basis...\n",
+      "Size of triangular part is 9\n",
+      "*     0: obj =   7.400000000e-02 inf =   1.110e-16 (16)\n",
+      "*     4: obj =  -4.040000000e-01 inf =   1.110e-16 (0)\n",
+      "OPTIMAL LP SOLUTION FOUND\n",
+      "Time used:   0.0 secs\n",
+      "Memory used: 0.1 Mb (83279 bytes)\n",
+      "Writing basic solution to 'C:\\Users\\tmari\\AppData\\Local\\Temp\\tmp28h900kx.glpk.raw'...\n",
+      "84 lines were written\n",
+      "GLPSOL--GLPK LP/MIP Solver 5.0\n",
+      "Parameter(s) specified in the command line:\n",
+      " --write C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpqmj47r9f.glpk.raw --wglp C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpdqn6suc6.glpk.glp\n",
+      " --cpxlp C:\\Users\\tmari\\AppData\\Local\\Temp\\tmp827diyzw.pyomo.lp\n",
+      "Reading problem data from 'C:\\Users\\tmari\\AppData\\Local\\Temp\\tmp827diyzw.pyomo.lp'...\n",
+      "10 rows, 65 columns, 161 non-zeros\n",
+      "266 lines were read\n",
+      "Writing problem data to 'C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpdqn6suc6.glpk.glp'...\n",
+      "314 lines were written\n",
+      "GLPK Simplex Optimizer 5.0\n",
+      "10 rows, 65 columns, 161 non-zeros\n",
+      "Preprocessing...\n",
+      "10 rows, 64 columns, 160 non-zeros\n",
+      "Scaling...\n",
+      " A: min|aij| =  1.000e+00  max|aij| =  1.000e+00  ratio =  1.000e+00\n",
+      "Problem data seem to be well scaled\n",
+      "Constructing initial basis...\n",
+      "Size of triangular part is 9\n",
+      "*     0: obj =   7.400000000e-02 inf =   1.110e-16 (16)\n",
+      "*     4: obj =   5.960000000e-01 inf =   1.110e-16 (0)\n",
+      "OPTIMAL LP SOLUTION FOUND\n",
+      "Time used:   0.0 secs\n",
+      "Memory used: 0.1 Mb (83279 bytes)\n",
+      "Writing basic solution to 'C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpqmj47r9f.glpk.raw'...\n",
+      "84 lines were written\n",
+      "GLPSOL--GLPK LP/MIP Solver 5.0\n",
+      "Parameter(s) specified in the command line:\n",
+      " --write C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpcwgyzgw4.glpk.raw --wglp C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpnjxlk856.glpk.glp\n",
+      " --cpxlp C:\\Users\\tmari\\AppData\\Local\\Temp\\tmp8uenzn3q.pyomo.lp\n",
+      "Reading problem data from 'C:\\Users\\tmari\\AppData\\Local\\Temp\\tmp8uenzn3q.pyomo.lp'...\n",
+      "10 rows, 65 columns, 161 non-zeros\n",
+      "266 lines were read\n",
+      "Writing problem data to 'C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpnjxlk856.glpk.glp'...\n",
+      "314 lines were written\n",
+      "GLPK Simplex Optimizer 5.0\n",
+      "10 rows, 65 columns, 161 non-zeros\n",
+      "Preprocessing...\n",
+      "10 rows, 64 columns, 160 non-zeros\n",
+      "Scaling...\n",
+      " A: min|aij| =  1.000e+00  max|aij| =  1.000e+00  ratio =  1.000e+00\n",
+      "Problem data seem to be well scaled\n",
+      "Constructing initial basis...\n",
+      "Size of triangular part is 9\n",
+      "*     0: obj =   7.400000000e-02 inf =   1.110e-16 (16)\n",
+      "*     4: obj =  -4.040000000e-01 inf =   1.110e-16 (0)\n",
+      "OPTIMAL LP SOLUTION FOUND\n",
+      "Time used:   0.0 secs\n",
+      "Memory used: 0.1 Mb (83279 bytes)\n",
+      "Writing basic solution to 'C:\\Users\\tmari\\AppData\\Local\\Temp\\tmpcwgyzgw4.glpk.raw'...\n",
+      "84 lines were written\n",
+      "ATE_autobound completed in 0.42 seconds.\n",
+      "Total runtime: 0.42 seconds.\n"
+     ]
+    },
+    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>X</th>\n",
+       "      <th>M</th>\n",
+       "      <th>Y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>495</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>496</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>497</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>498</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>500 rows × 3 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "['M', 'X', 'UB', 'Y']"
+       "     X  M  Y\n",
+       "0    1  1  1\n",
+       "1    0  0  1\n",
+       "2    0  0  1\n",
+       "3    0  0  0\n",
+       "4    0  1  1\n",
+       "..  .. .. ..\n",
+       "495  1  0  1\n",
+       "496  1  1  1\n",
+       "497  1  1  0\n",
+       "498  0  0  1\n",
+       "499  0  1  1\n",
+       "\n",
+       "[500 rows x 3 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +472,9 @@
     "                            )\n",
     "\n",
     "\n",
-    "customdag.observed"
+    "customdag.run()\n",
+    "\n",
+    "customdag.data"
    ]
   }
  ],
