classify best algorithms

--- a/simulation_engine/test.ipynb
+++ b/simulation_engine/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b019801d",
    "metadata": {},
    "outputs": [
@@ -64,22 +64,21 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running PNS_tianpearl...\n",
-      "PNS_tianpearl completed in 0.03 seconds.\n",
-      "Running PNS_causaloptim...\n",
-      "PNS_causaloptim completed in 6.58 seconds.\n",
-      "Algorithm 'PNS_entropy-0.10' is not recognized.\n",
-      "Total runtime: 6.60 seconds.\n"
+     "ename": "TypeError",
+     "evalue": "BinaryConf.__init__() takes 2 positional arguments but 3 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m data \u001b[38;5;241m=\u001b[39m BinaryConf\u001b[38;5;241m.\u001b[39mgenerate_data_rolling_ate(N_simulations\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, n\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m scenario \u001b[38;5;241m=\u001b[39m \u001b[43mBinaryConf\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mIV Dag\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m algs \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mATE_zaffalonbounds\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      5\u001b[0m algorithms \u001b[38;5;241m=\u001b[39m [alg \u001b[38;5;28;01mfor\u001b[39;00m alg \u001b[38;5;129;01min\u001b[39;00m scenario\u001b[38;5;241m.\u001b[39mget_algorithms(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mATE\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mzaffalonbounds\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m alg]\n",
+      "\u001b[1;31mTypeError\u001b[0m: BinaryConf.__init__() takes 2 positional arguments but 3 were given"
      ]
     }
    ],
    "source": [
-    "data = BinaryConf.generate_data_rolling_ate(4)\n",
-    "scenario = BinaryConf('IV Dag', data)\n",
-    "algs = ['PNS_tianpearl', 'PNS_causaloptim', 'PNS_entropybounds-0.10']\n",
+    "data = BinaryConf.generate_data_rolling_ate(N_simulations=1, n=10)\n",
+    "scenario = BinaryConf(data)\n",
+    "algs = ['ATE_zaffalonbounds']\n",
     "\n",
     "algorithms = [alg for alg in scenario.get_algorithms('ATE') if 'zaffalonbounds' not in alg]\n",
     "algorithms\n",
